<resources>

    <string name="app_name">ESL &amp; LAC</string>
    <string name="el_setting_play_preference">Audio Play Preference</string>
    <string name="el_setting_play_continually_playback">Continually Playback</string>
    <string name="el_setting_play_random_play">Random Order Playback</string>
    <string name="el_setting_content_display">Content Display Preference</string>
    <string name="el_setting_content_font_medium">Medium Font Size</string>
    <string name="el_setting_content_font_large">Large Font Size</string>
    <string name="app_version">1.6.1</string>
    <string name="app_author">codejie</string>
    <string name="app_email">codejie@gmail.com</string>
    <string name="el_menu_show_slowdialog">Slow Dialog</string>
    <string name="el_menu_show_explanation">Explanations</string>
    <string name="el_menu_show_fastdialog">Fast Dialog</string>
    <string name="el_fragment_downloader_removeall">Remove all downloading records</string>
    <string name="el_setting_play_auto">Automatically Playback</string>
    <string name="el_fragment_dict_inputquery">Input your keyword..</string>
    <string name="el_fragment_dict_pulltorefresh">Pull to refresh</string>
    <string name="el_fragment_dict_loading">Loading..</string>
    <string name="el_fragment_dict_releasetorefresh">Release to refresh</string>
    <string name="el_fragment_dict_nomoreresults">No more results</string>
    <string name="el_fragment_dict_nomatchresult">No matching result</string>
    <string name="el_setting_content_hide_title">Automatically Hide Title</string>
    <string name="el_setting_dictionary_preference">Dictionary Preference</string>
    <string name="el_setting_dictionary_notextension">Don\'t Load Extension Words</string>
    <string name="el_fragment_about_checkpackage">Check for new packages</string>
    <string name="el_play_el_is_playing">EL is playing..</string>
    <string name="el_play_el_pause_playback">EL pause playback..</string>
    <string name="el_menu_vocab">My Vocab</string>
    <string name="el_menu_about">About</string>
    <string name="el_menu_download">Download</string>
    <string name="el_menu_setting">Settings</string>
    <string name="el_toast_add_word_to_score">\'%s\' is added to vocab.</string>
    <string name="el_memory_level0">So easy !</string>
    <string name="el_memory_level1">I know it.</string>
    <string name="el_memory_level2">Maybe it is..</string>
    <string name="el_memory_level3">What is it ?</string>
    <string name="el_memory_level_title">How do you think this word ?</string>
    <string name="el_memory_level_title_1">So cool..Congratulations !</string>
    <string name="el_setting_memory_preference">Reciting Preference</string>
    <string name="el_setting_memory_random_load">Random Load Words</string>
    <string name="el_setting_memory_double_check">Double Check Result</string>
    <string name="el_setting_memory_show_result">Show Word Explanation</string>
    <string name="el_setting_memory_auto_delete">Auto-Delete High Score Words</string>
    <string name="el_menu_vocab_edit">Edit</string>
    <string name="el_menu_vocab_sortbyalpha">Sort by Alpha</string>
    <string name="el_menu_vocab_sortbyscore">Sort by Score</string>
    <string name="el_menu_vocab_groupbylesson">Group by Lesson</string>
    <string name="el_menu_vocab_groupbyscore">Group by Score</string>
    <string name="el_menu_vocab_groupbydate">Group by Date</string>
    <string name="el_menu_vocab_groupbynone">Not Group</string>
    <string name="el_menu_vocab_edit_1">Done</string>
    <string name="el_setting_memory_auto_speak">Automatically Speak Words</string>
    <string name="el_about_download_dialog_title">Download and install the latest version of EL ?</string>
    <string name="el_download_request_code">Request Code (12-Digit String)</string>
    <string name="el_downlod_check_code">Check Code (4-Digit String)</string>
    <string name="el_download_submit">Submit</string>
    <string name="el_menu_search_title">Search in bundled dictionary</string>
    <string name="el_menu_system_title">Sys</string>
    <string name="el_about_site_info">For more information, please visit http://www.cppblog.com/codejie.</string>
    <string name="el_about_dict_info">The Vicon English-Chinese Dictionary bundled in app is from Lingoes (www.lingoes.net).</string>
    <string name="el_menu_vocab_title">Vocab</string>
    <string name="el_show_noaudio">&lt;No Audio&gt;</string>
    <string name="el_menu_memory_title">Recitation</string>
    <string name="el_download_request_added">Request has been added the download queue.</string>
    <string name="el_download_request_wrong">Wrong request code, please try again.</string>
    <string name="el_memory_nowords">No more words</string>
    <string name="el_vocab_nowords">No Words in Vocab</string>
    <string name="el_play_playfailed">Can\'t play audio file - </string>
    <string name="el_downloader_dl_update_script">downloading package script..</string>
    <string name="el_downloader_dl_package">downloading package..</string>
    <string name="el_downloader_dl_check_packages">checking for new packages..</string>
    <string name="el_downloader_dl_latest_version">downloading latest version..</string>
    <string name="el_downloader_dl_failed">download failed</string>
    <string name="el_downloader_check_request">EL - please check request code</string>
    <string name="el_downloader_input_request">EL - please input request code again</string>
    <string name="el_downloader_check_failed">check for new packages failed</string>
    <string name="el_downloader_try">EL - please try again</string>
    <string name="el_downloader_dl_version_failed">download latest version of EL failed</string>
    <string name="el_about_retrieving">retrieving the info of new packages..</string>
    <string name="el_about_retrieving_failed">check for new packages failed.</string>
    <string name="el_about_dl_latest_version">begin to download latest version of EL..</string>
    <string name="el_about_dl_latest_version_failed">try to download latest version failed.</string>
    <string name="el_service_install_latest">ready to install the latest of EL..</string>
    <string name="el_speaker_init_missing_data">TTS initialize failed - missing data or not supported.</string>
    <string name="el_speaker_init_failed">TTS initialize failed - status:</string>

</resources>