<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/el_menu_memory"
        android:icon="@drawable/el_menu_memory"
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/el_menu_overflow"
        android:icon="@drawable/el_menu_over"
        android:showAsAction="always"
        android:title="Sys">
        <menu>
            <item android:id="@+id/el_menu_vocab_edit" android:showAsAction="always" android:title="@string/el_menu_vocab_edit"/>
            <item android:id="@+id/el_menu_vocab_sortbyalpha" android:title="@string/el_menu_vocab_sortbyalpha"/>
            <item android:id="@+id/el_menu_vocab_sortbyscore" android:title="@string/el_menu_vocab_sortbyscore"/>
            <item android:id="@+id/el_menu_vocab_groupbylesson" android:title="@string/el_menu_vocab_groupbylesson"/>
            <item android:id="@+id/el_menu_vocab_groupbyscore" android:title="@string/abs__action_bar_home_description"/>
            <item android:id="@+id/el_menu_vocab_groupbydate" android:title="@string/el_menu_vocab_groupbydate"/>
            <item android:id="@+id/el_menu_vocab_groupbynone" android:title="@string/el_menu_vocab_groupbynone"/>
        </menu>
    </item>
</menu>
